# test-tareq-joumaa

./: README.md  pyproject.toml
.github/workflows/: ci.yml
test_tareq_joumaa/: hooks.py  modules.txt
test_tareq_joumaa/test_tareq_joumaa/doctype/monthly_usage/: monthly_usage.json  monthly_usage.py
test_tareq_joumaa/test_tareq_joumaa/doctype/solar_roi_calculation/: solar_roi_calculation.js  solar_roi_calculation.json  solar_roi_calculation.py  test_solar_roi_calculation.py
